<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner_types"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"
            tools:visibility="visible">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_players"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <include layout="@layout/layout_content_progress" />

    <include layout="@layout/layout_message" />

</android.support.design.widget.CoordinatorLayout>