<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_list_height"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="@dimen/item_list_image_width"
        android:layout_height="@dimen/item_list_image_height"
        android:layout_marginEnd="@dimen/item_list_image_margin"
        android:layout_marginRight="@dimen/item_list_image_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ItemListName"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            style="@style/ItemListDate"/>

    </RelativeLayout>

</LinearLayout>
